msdk: vp9 encode regression
Unable to encode vp9 on Intel ICL+ since gst-plugins-bad!2523 (merged).
gst-launch-1.0 -vf videotestsrc num-buffers=150 \
! video/x-raw,format=NV12 \
! msdkvp9enc rate-control=cqp hardware=true gop-size=30 \
qpi=28 qpp=28 qpb=28 target-usage=4 num-slices=1 \
! video/x-vp9 ! vp9parse \
! matroskamux ! filesink location=output.webm
...
0:00:00.027971857 25341 0x55997fca2de0 ERROR msdkenc gstmsdkenc.c:766:gst_msdkenc_init_encoder:<msdkvp9enc0> Video Encode Query failed (undefined behavior)
...